@@ -26,15 +26,10 @@ class EvtAbsExternalGen {
 
 public:
 
-  EvtAbsExternalGen() {};
-  virtual ~EvtAbsExternalGen() {};
-
+  virtual ~EvtAbsExternalGen() = default;
   virtual bool doDecay(EvtParticle* theMother) = 0;
+  virtual double getDecayProb(EvtParticle*) {return 1.0;}
   virtual void initialise() = 0;
-
-protected:
-
-private:
 
 };
 
